# shelltrace

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
src/: format.c  format.h  hook.c  hook.h  hook_sys.c  options.c  options.h  segments.c  segments.h  shelltrace.c  tracer.c  tracer.h  util.c  util.h
